# kindo.message.client

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
clients/kindo_message_python_client/: .env.example  README.md  config.py  producer.py  requirements-dev.txt
clients/python/: .env.example  README.md  config.py  producer.py  requirements.txt  signer.py
clients/python/kindo_message_client/: config.py  producer.py
clients/python/kindo_message_client/schemas/: producer_payload.json
clients/python/tests/: test_producer.py
schemas/: producer_payload.json
